fix: content overflow to another card on schedule section

--- a/css/style.css
+++ b/css/style.css
@@ -954,7 +954,7 @@ ol {
 		padding: 0 0;
 	}
 	.schedule-tab .st-content {
-		padding-left: 30px;
+		padding-left: 10px;
 	}
 	
 	.latest-item.large-item {
